clusters/apps/env/production/flux-system/webhook-receiver/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-receiver
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: receiver.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`receiver.${FAMILY_DOMAIN}`)"
      priority: 10
      services:
        - name: webhook-receiver
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: receiver.${FAMILY_DOMAIN}
